--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
-<p>
-  home works!
-</p>
+<app-nav></app-nav>
+<div class="d-flex">
+  <div class="app-left">
+    <app-menu-list></app-menu-list>
+  </div>
+  <div class="app-right">
+      <app-toolbar></app-toolbar>
+  </div>
+</div>
